[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/button.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/YouWinScreen.gd" type="Script" id=2]
[ext_resource path="res://Fonts/title.tres" type="DynamicFont" id=3]

[node name="YouWinScreen" type="Panel"]
self_modulate = Color( 1, 1, 1, 0.901961 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 61
custom_constants/margin_top = 30
custom_constants/margin_left = 61
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 61.0
margin_top = 30.0
margin_right = 963.0
margin_bottom = 570.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 902.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 3 )
text = "You win!"
align = 1
valign = 1

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 902.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Next" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 902.0
margin_bottom = 402.0
custom_fonts/font = ExtResource( 1 )
text = "Next Level"
flat = true

[node name="Replay" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 406.0
margin_right = 902.0
margin_bottom = 448.0
custom_fonts/font = ExtResource( 1 )
text = "Replay Level"
flat = true

[node name="Select" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 452.0
margin_right = 902.0
margin_bottom = 494.0
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "Level Select"
flat = true

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 498.0
margin_right = 902.0
margin_bottom = 540.0
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "Leave to Menu"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Select" to="." method="_on_Select_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
